<resources>
    <string name="app_name">Eventix Mobile App</string>
    <string name="Upcoming_Events">Upcoming Events</string>
    <string name="Kandy_Perahera_Experience">Kandy Perahera Experience</string>
    <string name="Ella_Adventure_Trekking_Challenge">Ella Adventure Trekking Challenge</string>
    <string name="Sandalwood_Sounds_Acoustic_Night">Sandalwood Sounds – Acoustic Night</string>
    <string name="Jaffna_Crab_Feast">Jaffna Crab Feast</string>
    <string name="Invite_your_friends">Invite your friends</string>
    <string name="Feature_limited_time_offers">Feature limited-time offers, promotions, or discounts for users to take advantage of</string>
    <string name="Exclusive_Deals">Exclusive Deals</string>
    <string name="Book_Now">Book Now</string>
    <string name="View_More">View More >> </string>
    <string name="Events_Nea_You">Events Near You</string>
    <string name="onboard1_title">Find Your Favorite Events</string>
    <string name="onboard1_desc">Concerts, sports, theater, and more – explore thousands of events near you!</string>
    <string name="Next">Next</string>
    <string name="onboard2_title">Fast and Secure Booking</string>
    <string name="onboard2_desc">Book your tickets in just a few taps with secure payment options</string>
    <string name="onboard3_title">Events Just for You</string>
    <string name="onboard3_desc">Get personalized recommendations based on your interests and location.</string>
    <string name="Get_started">Get Started</string>
    <string name="welcome_text">Discover and book tickets for your favorite events with Eventix – fast, easy, and hassle-free!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="cpass">Confirm password</string>
    <string name="Street_Food_Carnival">Sri Lankan Street Food Carnival</string>
    <string name="date1">March 15, 2025</string>
    <string name="location1">Viharamahadevi Park, Colombo</string>
    <string name="your_booking">Your Booking</string>
    <string name="cancel_booking">CANCEL BOOKING</string>
    <string name="Booking_ID">Booking ID</string>
    <string name="status">Status</string>
    <string name="No_of_tickets">No of tickets</string>
    <string name="paid">PAID</string>
    <string name="Sri_Lankan_Street_Food_Carnival">Sri Lankan Street Food Carnival</string>
    <string name="MY_BOOKINGS">MY BOOKINGS</string>
    <string name="PREVIOUS_BOOKINGS">PREVIOUS BOOKINGS</string>
    <string name="UPDATE_PROFILE">UPDATE PROFILE</string>
    <string name="Sakith_Liyanage">Sakith Liyanage</string>
    <string name="View_Ticket">View Ticket</string>
    <string name="Delete">Delete</string>
    <string name="user_email">sakithchanlaka2004@gmail.com</string>
    <string name="Payment_Success_msg">Payment is Successfull</string>
    <string name="payment">Payment</string>
    <string name="ticket_price">LKR 1,500</string>
    <string name="Card_Holder_Name">Card Holder Name</string>
    <string name="Card_Number">Card Number</string>
    <string name="exp_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="pay_now">PAY NOW</string>
    <string name="cancel_book_prompt">Are you sure you want to cancel this Booking?</string>
    <string name="cancel_agree">You will be refunded the full amount once your cancellation is processed. Please note that the cancellation cannot be undone.</string>
    <string name="proceed">PROCEED</string>
    <string name="Galle_Beach_Fest">Galle Beach Fest</string>
    <string name="Colombo_Music">Colombo Music Vibes 2025</string>
    <string name="events">Events</string>
    <string name="npass">New Password</string>
    <string name="username">"     Sakith Liyanage"</string>
    <string name="user_email_placeholder">"     sakith@gmail.com"</string>
    <string name="event_desc">A night of revelry and merriment awaits you at the Fairway Colombo  Street Food Festival. Indulge in a festive atmosphere of live music,  contemporary artists and a delectable selection of local and  international cuisine that is bound to take you on a flavourful culinary adventure.</string>
    <string name="event_time">Tuesday, 4:00PM - 9:00PM</string>
    <string name="buy_ticket">BUY TICKET</string>
    <string name="event_deta">Events Details</string>
    <string name="app_tagline">Discover Events Near You</string>
    <string name="app_version">v1.0.0</string>
    <string name="wel_title">Welcome to EventHub</string>
</resources>