<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".confirm_cancel">

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="294dp"
        android:layout_height="251dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cancel_booking" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/league_spartan"
        android:text="@string/cancel_booking"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView28" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="344dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/league_spartan"
        android:text="@string/cancel_book_prompt"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="344dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/league_spartan"
        android:text="@string/cancel_agree"
        android:textColor="#D9D7D7"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <Button
        android:id="@+id/cancel_proceed"
        android:layout_width="138dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/white"
        android:text="@string/proceed"
        android:textColor="@color/primary_color"
        android:textColorLink="@color/ic_launcher_background"
        android:textSize="15sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />
</androidx.constraintlayout.widget.ConstraintLayout>